--- a/package.json
+++ b/package.json
@@ -19,13 +19,15 @@
     "react-redux": "^9.2.0",
     "react-transition-group": "^4.4.5",
     "redux-persist": "^6.0.0",
-    "tailwind-merge": "^3.3.1"
+    "tailwind-merge": "^3.3.1",
+    "uuid": "^11.1.0"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "@types/react-transition-group": "^4.4.12",
     "tailwindcss": "^4",
     "typescript": "^5"
   }
