--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "dayjs": "^1.11.13",
     "next": "15.4.5",
     "react": "19.1.0",
+    "react-confetti": "^6.4.0",
     "react-dom": "19.1.0",
     "react-redux": "^9.2.0",
     "react-transition-group": "^4.4.5",
